--- a/events.html
+++ b/events.html
@@ -194,7 +194,6 @@
                     <img class="box__img" src="images/11.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
-                    <div class="box__deco box__deco--top">&#10153;</div>
                 </div>
             </a>
             <a class="grid__item" href="#preview-12">
@@ -211,7 +210,6 @@
                     <img class="box__img" src="images/13.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Entertainment Quiz</span></h4>
-                    <div class="box__deco box__deco--top">&#10153;</div>
                 </div>
             </a>
             <a class="grid__item" href="#preview-14">
@@ -220,7 +218,6 @@
                     <img class="box__img" src="images/14.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Street Play</span></h4>
-                    <div class="box__deco box__deco--top">&#10153;</div>
                 </div>
             </a>
             <a class="grid__item" href="#preview-15">
@@ -229,7 +226,6 @@
                     <img class="box__img" src="images/15.jpg" alt="Some image"/>
                     <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
                     <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">One Act Play</span></h4>
-                    <div class="box__deco box__deco--top">&#10153;</div>
                 </div>
             </a>
             <a class="grid__item" href="#preview-16">
@@ -288,7 +284,7 @@
         <div class="overlay__item" id="preview-1">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/1.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
                 <h4 class="box__text"><span class="box__text-inner">Group Dance</span></h4>
             </div>
@@ -297,7 +293,7 @@
         <div class="overlay__item" id="preview-2">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/2.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/2.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Music">Music</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Battle Of Bands</span></h4>
                 <div class="box__deco box__deco--top">&#10032;</div>
@@ -307,7 +303,7 @@
         <div class="overlay__item" id="preview-3">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/3.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Style">Style</span></h3>
                 <h4 class="box__text box__text--topcloser"><span class="box__text-inner">Fashion Parade</span></h4>
             </div>
@@ -316,7 +312,7 @@
         <div class="overlay__item" id="preview-4">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/4.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Duet Singing</span></h4>
             </div>
@@ -325,7 +321,7 @@
         <div class="overlay__item" id="preview-5">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/5.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Treasure">Treasure</span></h3>
                 <h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Treasure Hunt</span></h4>
             </div>
@@ -334,7 +330,7 @@
         <div class="overlay__item" id="preview-6">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/6.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Duet">Duet</span></h3>
                 <h4 class="box__text"><span class="box__text-inner">DUET DANCE</span></h4>
             </div>
@@ -343,7 +339,7 @@
         <div class="overlay__item" id="preview-7">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/7.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="Debate">Debate</span></h3>
                 <h4 class="box__text box__title--bottom"><span class="box__text-inner box__text-inner--rotated1">Debate</span></h4>
             </div>
@@ -352,7 +348,7 @@
         <div class="overlay__item" id="preview-8">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/8.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Solo">Solo</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Solo Singing</span></h4>
                 <div class="box__deco">&#10108;</div>
@@ -362,7 +358,7 @@
         <div class="overlay__item" id="preview-9">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/9.jpg" alt="Some image"/>
                 <h3 class="box__title"><span class="box__title-inner" data-hover="Esports">Esports</span></h3>
                 <h4 class="box__text box__text--bottom"><span class="box__text-inner">Gaming</span></h4>
             </div>
@@ -371,7 +367,7 @@
         <div class="overlay__item" id="preview-10">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/10.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
                 <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
             </div>
@@ -380,7 +376,7 @@
         <div class="overlay__item" id="preview-11">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
+                <img class="box__img box__img--original" src="images/11.jpg" alt="Some image"/>
                 <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Rap">Rap</span></h3>
                 <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Rapping</span></h4>
                 <div class="box__deco box__deco--top">&#10153;</div>
@@ -390,90 +386,90 @@
         <div class="overlay__item" id="preview-12">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/12.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Dance">Dance</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Solo Dance</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-13">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/13.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Quiz">Quiz</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Entertainment Quiz</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-14">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/14.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Street Play</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-15">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/15.jpg" alt="Some image"/>
+                <h3 class="box__title box__title--straight box__title--left"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                <h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">One Act Play</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-16">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/16.jpg" alt="Some image"/>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Fun">Fun</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Musical Chairs</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-17">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/17.jpg" alt="Some image"/>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Drama">Drama</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">AD-MAD Show</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-18">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/18.jpg" alt="Some image"/>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="60sec">60sec</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Minute to Win it</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-19">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/19.jpg" alt="Some image"/>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Selfie">Selfie</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Selfie Contest</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-20">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/20.jpg" alt="Some image"/>
+                <h3 class="box__title"><span class="box__title-inner" data-hover="Art">Art</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tattoo Making</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
         <div class="overlay__item" id="preview-21">
             <div class="box">
                 <div class="box__shadow"></div>
-                <img class="box__img box__img--original" src="images/original/1.jpg" alt="Some image"/>
-                <h3 class="box__title box__title--bottom"><span class="box__title-inner" data-hover="Poems">Poems</span></h3>
-                <h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">Poetry Recitation</span></h4>
+                <img class="box__img box__img--original" src="images/21.jpg" alt="Some image"/>
+                <<h3 class="box__title"><span class="box__title-inner" data-hover="Luck">Luck</span></h3>
+                <h4 class="box__text box__text--bottom"><span class="box__text-inner">Tambola</span></h4>
             </div>
             <p class="overlay__content">Details</p>
         </div>
