--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
-	
+	<link href="css/index.css" rel="stylesheet">
 	<script src="js/snap.svg-min.js"></script>
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
@@ -169,8 +169,8 @@
 					<br>
 					<div class="radio-inline" class="wrap-input100 validate-input" >
 						<span class="label-input100">Payment</span><br>
-						<center><input type="radio" name="payment" value="cash" required id="pay">By Cash<br>
-						<input type="radio" name="payment" value="paytm" required id="pay">Via Paytm</center>	
+						<center><input type="radio" value="cash" required id="pay">By Cash<br>
+						<input type="radio" value="paytm" required id="pay">Via Paytm</center>	
 						<span class="focus-input100" ></span>
 					</div>
 					<br>
