--- a/schedule.html
+++ b/schedule.html
@@ -90,24 +90,32 @@
         <div class="pieces-slider">
             <!-- Each slide with corresponding image and text -->
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/1.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 1</h2>
+                <img class="pieces-slider__image" src="img/s1.jpg" alt="">
+                <h2 class="pieces-slider__text">Inauguration(9:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/2.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 2</h2>
+                <img class="pieces-slider__image" src="img/s2.jpg" alt="">
+                <h2 class="pieces-slider__text">Battle Of Band(10:00AM)</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/3.jpg" alt="">
-                <h2 class="pieces-slider__text">Event3</h2>
+                <img class="pieces-slider__image" src="img/s3.jpg" alt="">
+                <h2 class="pieces-slider__text">Duet Dance</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/4.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 4</h2>
+                <img class="pieces-slider__image" src="img/s4.jpg" alt="">
+                <h2 class="pieces-slider__text">Duet Singing</h2>
             </div>
             <div class="pieces-slider__slide">
-                <img class="pieces-slider__image" src="img/5.jpg" alt="">
-                <h2 class="pieces-slider__text">Event 5</h2>
+                <img class="pieces-slider__image" src="img/s5.jpg" alt="">
+                <h2 class="pieces-slider__text">Solo Dance</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s7.jpg" alt="">
+                <h2 class="pieces-slider__text">One Act Play</h2>
+            </div>
+            <div class="pieces-slider__slide">
+                <img class="pieces-slider__image" src="img/s6.jpg" alt="">
+                <h2 class="pieces-slider__text">Fashion Parade</h2>
             </div>
             <!-- Canvas to draw the pieces -->
             <canvas class="pieces-slider__canvas"></canvas>
