Fixed Radio Button

--- a/register.html
+++ b/register.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
+	<title>Event Registration</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Emblazon 2019||The Cultural Fest of HMRITM</title>
-	<meta name="description" content="HMRITM's 2019 Techfest's official site." />
-	<meta name="keywords" content="fun,Cultural Fest, HMR, HMRITM, Vishesh Mohey,Delhi,Events ,Doomedtodie,New delhi,Fun,robotics,Star Night,Bands,Fashion,Emblazon,emblazon" />
-	<meta name="author" content="Vishesh Mohey(Doomedtodie)" />
-	<link rel="shortcut icon" href="images/mask_logo.png">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/base.css" />
-	<link href="css/index.css" rel="stylesheet">
-	<script src="js/snap.svg-min.js"></script>
-	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this Site in a modern browser for best experience.");</script>
+	
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util_form.css">
 	<link rel="stylesheet" type="text/css" href="css/main_form.css">
+<!--===============================================================================================-->
 <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
 <script>
   // Initialize Firebase
@@ -42,70 +43,7 @@
 </script>
 </head>
 <body>
-<svg class="hidden">
-	<symbol id="icon-menu" viewBox="0 0 119 25">
-		<title>menu</title>
-		<path d="M36,8 L36,0 L100,0 L100,8 L36,8 Z M0,8 L0,0 L24,0 L24,8 L0,8 Z M0,28 L0,20 L71,20 L71,28 L0,28 Z"/>
-	</symbol>
-	<symbol id="icon-close" viewBox="0 0 24 24">
-		<title>close</title>
-		<path d="M24 1.485L22.515 0 12 10.515 1.485 0 0 1.485 10.515 12 0 22.515 1.485 24 12 13.484 22.515 24 24 22.515 13.484 12z"/>
-	</symbol>
-</svg>
-<div class="background"></div>
-<nav class="menu">
-    <div class="menu__item menu__item--1" data-direction="bt">
-        <div class="menu__item-inner">
-            <div class="mainmenu">
-                <a href="index.html" class="mainmenu__item">Emblazon 2019</a>
-                <a href="about.html" class="mainmenu__item">About Us</a>
-                <a href="events.html" class="mainmenu__item">Events</a>
-                <a href="team.html" class="mainmenu__item">Our Team</a>
-                <a href="sponsors.html" class="mainmenu__item">Sponsors</a>
-                <a href="register.html"class="mainmenu__item">Register</a>
-            </div>
-            <p class="label label--topleft label--vert-mirror">HMRITM</p>
-            <p class="label label--bottomright label--vert">The Important Stuff</p>
-        </div>
-    </div>
-    <div class="menu__item menu__item--2" data-direction="lr">
-        <div class="menu__item-inner">
-            <div class="menu__item-map"></div>
-            <a href="https://goo.gl/maps/dQ8LBvDARF52" target="_blank" class="menu__item-hoverlink">The Location</a>
-        </div>
-    </div>
-    <div class="menu__item menu__item--3" data-direction="bt">
-        <div class="menu__item-inner">
-            <div class="sidemenu">
-                <a href="http://www.hmritm.ac.in/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">HMRITM</span></a>
-                <a href="https://www.instagram.com/emblazon_2k18/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Instagram</span></a>
-                <a href="https://www.facebook.com/hmritm.emblazon/" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Facebook</span></a>
-                <a href="#" target="_blank" class="sidemenu__item"><span class="sidemenu__item-inner">Youtube</span></a>
-
-            </div>
-        </div>
-    </div>
-    <div class="menu__item menu__item--4" data-direction="rl">
-        <div class="menu__item-inner">
-
-            <p class="label label--topleft label--line">Be a Part now</p>
-            <a href="schedule.html" class="menu__item-link">Day 1 Schedule</a>
-            <a href="schedule2.html" class="menu__item-link">Day 2 Schedule</a>
-        </div>
-
-
-
-    </div>
-    <div class="menu__item menu__item--5" data-direction="tb">
-        <div class="menu__item-inner">
-            <p class="quote">"Children, this is the only gift I can give you right now. A formless gift you call a memory."</p>
-        </div>
-    </div>
-
-
-    <button class="action action--menu"><svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
-    <button class="action action--close"><svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg></button>
-</nav>
+	
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
@@ -169,8 +107,8 @@
 					<br>
 					<div class="radio-inline" class="wrap-input100 validate-input" >
 						<span class="label-input100">Payment</span><br>
-						<center><input type="radio" value="cash" required id="pay">By Cash<br>
-						<input type="radio" value="paytm" required id="pay">Via Paytm</center>	
+						<center><input type="radio" name="payment" value="cash" required id="pay">By Cash<br>
+						<input type="radio"  name="payment" value="paytm" required id="pay">Via Paytm</center>
 						<span class="focus-input100" ></span>
 					</div>
 					<br>
@@ -194,22 +132,23 @@
 
 	<div id="dropDownSelect1"></div>
 	
+<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
 	<script src="vendor/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
 	<script src="vendor/daterangepicker/moment.min.js"></script>
 	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
 	<script src="vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
 	<script src="js/main_form.js"></script>
 	<script src="js/index_form.js"></script>
-<script src="js/imagesloaded.pkgd.min.js"></script>
-<script src="js/TweenMax.min.js"></script>
 
-<script>window.onbeforeunload = function () {
-    window.scrollTo(0, 0);
-}</script>
-<script src="js/demo.js"></script>
 </body>
 </html>
